--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,11 @@
     <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Safari Guides API</h1>
-    <p>An open API for safari guides across east Africa</p>
+    <div class="main">
+      <div class="content">
+        <h1>Safari Guides API</h1>
+        <p>An open API for safari guides across east Africa</p>
+      </div>
+    </div>
   </body>
 </html>
