--- a/views/404.html
+++ b/views/404.html
@@ -7,5 +7,15 @@
     <title>404 - Safari Guides</title>
     <link href="css/styles.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <div class="main">
+      <div class="content">
+        <h1>Not found</h1>
+        <p>
+          The Resource you requested can not be found, it is either deleted or
+          moved to a different location.
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
